--- a/homepage/templates/registration.html
+++ b/homepage/templates/registration.html
@@ -199,6 +199,9 @@
                           </div>
                         </div>
                       </div>
+                      <div class="col-md-12">
+                        <span class="help-text">Password Should Contains Minimum 6 Characters( Atleast 1Capital Letter , 1Small Letter, 1Number )</span>
+                      </div>
                     </div>
 
 
