--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -1,28 +1,28 @@
 {% extends "base.html" %} {% load staticfiles %} {% block specific_head %}
-<title>Monomerce.com , Realtime inventory , Point of Sale systems in India</title>
+<title>{{seoDetails.title}}</title>
 
-<meta name="description" content="One stop solution for your inventory mismatch problems. Get latest and fastest inventory update system ever"/>
-<link rel="canonical" href="https://monomerce.com/" />
-<link rel="publisher" href="https://plus.google.com/b/105723801328437605094/"/>
+<meta name="description" content="{{seoDetails.description}}"/>
+<link rel="canonical" href="{{seoDetails.url}}" />
+<link rel="publisher" href="{{seoDetails.publisher}}"/>
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Monomerce.com , Realtime inventory , Point of Sale systems in India" />
-<meta property="og:description" content="One stop solution for your inventory mismatch problems. Get latest and fastest inventory update system ever" />
-<meta property="og:url" content="https://monomerce.com" />
-<meta property="og:site_name" content="24 Tutors" />
+<meta property="og:title" content="{{seoDetails.title}}" />
+<meta property="og:description" content="{{seoDetails.description}}" />
+<meta property="og:url" content="{{seoDetails.url}}" />
+<meta property="og:site_name" content="{{seoDetails.site_name}}" />
 <meta property="og:updated_time" content="2018-04-01T07:17:53+00:00" />
-<meta property="og:image" content="https://monomerce.com/static/images/seo_mono_common.png" />
-<meta property="og:image:secure_url" content="https://monomerce.com/static/images/seo_mono_common.png" />
-<meta property="og:image:width" content="1024" />
-<meta property="og:image:height" content="719" />
+<meta property="og:image" content="https://{{ request.get_host }}{{seoDetails.image}}" />
+<meta property="og:image:secure_url" content="https://{{ request.get_host }}{{seoDetails.image}}" />
+<meta property="og:image:width" content="{{seoDetails.width}}" />
+<meta property="og:image:height" content="{{seoDetails.height}}" />
 <meta name="twitter:card" content="summary" />
-<meta name="twitter:description" content="One stop solution for your inventory mismatch problems. Get latest and fastest inventory update system ever" />
-<meta name="twitter:title" content="Monomerce.com , Realtime inventory , Point of Sale systems in India" />
-<meta name="twitter:site" content="@monomerce" />
-<meta name="twitter:image" content="https://monomerce.com/static/images/seo_mono_common.png" />
-<meta name="twitter:creator" content="@monomerce" />
+<meta name="twitter:description" content="{{seoDetails.description}}" />
+<meta name="twitter:title" content="{{seoDetails.title}}" />
+<meta name="twitter:site" content="{{data.seoDetails.site_name}}" />
+<meta name="twitter:image" content="https://{{ request.get_host }}{{seoDetails.image}}" />
+<meta name="twitter:creator" content="{{data.seoDetails.twitter_creator}}" />
 
-<meta property="article:author" content="monomerce.com" />
+<meta property="article:author" content="{{seoDetails.author}}" />
 <link rel="icon" href="/static/images/tutor.ico" type="image/gif" sizes="16x16">
 
 {% endblock %} {% block specific_css %}
