--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -1,10 +1,25 @@
 <footer style="background-color: #eeeeee;">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 text-left">
-        <span class="copyright">Copyright &copy; CIOC FMCG Pvt Ltd 2017</span>
+      <div class="col-md-6 hidden-sm hidden-xs text-left">
+        <span class="copyright">Copyright &copy;  Sterling Select 2017 </span>
       </div>
-      <div class="col-md-6 text-right">
+      <div class="col-md-6 hidden-sm hidden-xs text-right">
+        <ul class="list-inline quicklinks">
+          <li><a href="/desclaimer">Disclaimer and IP</a>
+          </li>
+          <li><a href="/policy">Privacy Policy</a>
+          </li>
+          <li><a href="/terms">Terms of Use</a>
+          </li>
+          <li><a href="/refund">Refund and Cancellation Policy </a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-sm-12 col-xs-12 hidden-lg hidden-md text-center">
+        <span class="copyright">Copyright &copy;  Sterling Select 2017 </span>
+      </div>
+      <div class="col-sm-12 col-xs-12 hidden-lg hidden-md text-center">
         <ul class="list-inline quicklinks">
           <li><a href="/desclaimer">Disclaimer and IP</a>
           </li>
