--- a/homepage/templates/registration.html
+++ b/homepage/templates/registration.html
@@ -33,7 +33,9 @@
 <div class="row" style="height:7vh;background-color:#1f5b82">
 
   <div class="col-md-4  col-xs-4 text-right">
-    <img ng-click="$state.go('ecommerce')" src="/static/images/sterlin_select.png" style="height:7vh;cursor:pointer;" alt="">
+    <a href="/" style="cursor:pointer">
+    <img src="/static/images/sterlin_select.png" style="height:7vh;cursor:pointer;" alt="">
+  </a>
   </div>
 
 
