--- a/homepage/templates/registration.html
+++ b/homepage/templates/registration.html
@@ -30,7 +30,7 @@
 
 
 
-<div class="row" style="height:7vh;background-color:#1f5b82">
+<div class="row" style="height:7vh;background-color:white">
 
   <div class="col-md-4  col-xs-4 text-right">
     <a href="/" style="cursor:pointer">
@@ -40,11 +40,11 @@
 
 
   <div class="col-md-5 hidden-xs hidden-sm  text-right"style="margin-top: 20px;">
-    <a href="/login" style="cursor:pointer;font-size:17px;color:white;text-decoration:none;"> Already User? <i class="fa fa-user fa-lg"></i></a>
+    <a href="/login" style="cursor:pointer;font-size:17px;color:white;text-decoration:none;color:rgb(24, 89, 46)"> Already User? <i class="fa fa-user fa-lg"></i></a>
 
   </div>
   <div class="col-xs-6 hidden-lg hidden-md  text-right"style="margin-bottom:5px">
-    <a href="/login" style="cursor:pointer;font-size:17px;color:white;text-decoration:none;"> Already User? <i class="fa fa-user fa-lg"></i></a>
+    <a href="/login" style="cursor:pointer;font-size:17px;color:white;text-decoration:none;color:rgb(24, 89, 46)"> Already User? <i class="fa fa-user fa-lg"></i></a>
 
   </div>
   <!-- <div class="col-xs-9 text-right hidden-md hidden-lg" ng-if="!me.pk">
