--- a/ecommerce/templates/app.ecommerce.support.email.html
+++ b/ecommerce/templates/app.ecommerce.support.email.html
@@ -200,7 +200,7 @@
                   <tr>
                     <td class='movableContentContainer bgItem'>
 
-                      <div class='movableContent'>
+                      <!-- <div class='movableContent'>
                         <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" class="container">
                           <tr height="40">
                             <td width="200">&nbsp;</td>
@@ -224,11 +224,11 @@
                             <td width="200">&nbsp;</td>
                           </tr>
                         </table>
-                      </div>
+                      </div> -->
 
                       <div class='movableContent'>
-                        <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" class="container">
-                          <tr>
+                        <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" class="container" style="border:1px solid black">
+                          <tr style="border:1px solid black">
                             <td width="100%" colspan="3" align="center" style="padding-bottom:10px;padding-top:25px;">
                               <div class=" ">
                                 <div class="" align='center'>
@@ -237,19 +237,15 @@
                               </div>
                             </td>
                           </tr>
-                          <tr>
-                            <td width="100">&nbsp;</td>
-                            <td width="400" align="center">
-                              <div class=" ">
-                                <div class="" align='left'>
-                                  <p>Hi,</p>
-                                    <br/>
-                                    <br/>
+                          <tr style="border:1px solid black">
+                            <td  align="center" style="height:50vh;" >
+                                <div class="" align='left' style="margin-top: -100px;">
+                                  <p style="padding-left:15px;padding-top:15px"><strong>Hi,</strong></p>
+                                  <p style="margin-bottom:10px;margin-top:0px;padding-left:15px">
                                     {{response}}
+                                  </p>
                                 </div>
-                              </div>
                             </td>
-                            <td width="100">&nbsp;</td>
                           </tr>
                         </table>
                         <!-- <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" class="container">
@@ -274,7 +270,7 @@
                       <div class='movableContent'>
                         <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" class="container">
                           <tr>
-                            <td width="100%" colspan="2" style="padding-top:65px;">
+                            <td width="100%" colspan="2" style="padding-top:20px;">
                               <hr style="height:1px;border:none;color:#333;background-color:#ddd;"/>
                             </td>
                           </tr>
