--- a/ecommerce/templates/app.ecommerce.support.email.html
+++ b/ecommerce/templates/app.ecommerce.support.email.html
@@ -241,8 +241,8 @@
                             <td  align="center" style="height:50vh;" >
                                 <div class="" align='left' style="margin-top: -100px;">
                                   <p style="padding-left:15px;padding-top:15px"><strong>Hi,</strong></p>
-                                  <p style="margin-bottom:10px;margin-top:0px;padding-left:15px">
-                                    {{response}}
+                                  <p style="margin-bottom:10px;margin-top:0px;padding-left:15px" data-bind="response">
+                                  {{response}}
                                   </p>
                                 </div>
                             </td>
