--- a/homepage/templates/customerDashboard.html
+++ b/homepage/templates/customerDashboard.html
@@ -51,7 +51,7 @@
   <!-- ============================================================== -->
   <!-- Main wrapper - style you can find in pages.scss -->
   <!-- ============================================================== -->
-  <div id="main-wrapper">
+  <div ng-app="customerApp" ng-controller="cutomerController" id="main-wrapper">
     <!-- ============================================================== -->
     <!-- Topbar header - style you can find in pages.scss -->
     <!-- ============================================================== -->
@@ -425,6 +425,11 @@
               </ul>
             </li>
             <li class="nav-devider"></li>
+            <li class="nav-small-cap">Support</li>
+            <li ng-click="review()" > <a class="waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Review</span></a></li>
+            <li> <a class="waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Settings</span></a></li>
+            <li> <a class="waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Knowledge Base</span></a></li>
+            <li class="nav-devider"></li>
             <li class="nav-small-cap">FORMS, TABLE &amp; WIDGETS</li>
             <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-file"></i><span class="hide-menu">Forms</span></a>
               <ul aria-expanded="false" class="collapse">
@@ -615,12 +620,14 @@
   {% if useCDN %}
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
   {% else %}
   <script src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
   <script src="{% static 'js/jquery.cookie-1.4.1.min.js' %}"></script>
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'js/angular.min.js' %}"></script>
   {% endif %}
-
+  <script src="/static/js/customer.js"> </script>
   <script src="{% static 'customer/js/plugins/jquery.min.js' %}"></script>
   <!-- Bootstrap tether Core JavaScript -->
   <script src="{% static 'customer/js/plugins/popper.min.js' %}"></script>
@@ -654,7 +661,6 @@
 
 
   {% block specific_js %}{% endblock %}
-
 
 </body>
 
