tabs in customer profile

--- a/homepage/templates/customerHome.html
+++ b/homepage/templates/customerHome.html
@@ -5,6 +5,7 @@
 
 <!-- Page wrapper  -->
 <!-- ============================================================== -->
+{% verbatim %}
 <div class="page-wrapper">
   <!-- ============================================================== -->
   <!-- Container fluid  -->
@@ -87,7 +88,7 @@
         </div>
     </div> -->
 
-
+<!--
     <div ng-if="displayReview">
       <div class="card">
         <div class="card-body">
@@ -115,8 +116,55 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
+    <div ng-if="displayReview">
+      <uib-tabset>
+        <uib-tab active="searchTabActive">
+          <uib-tab-heading>
+            Browse
+            <i class="fa fa-list-ul"></i>
+          </uib-tab-heading>
+          <div class="card">
+            <div class="card-body">
+              <div class="row" >
+                <!-- {{reviewData}} -->
+                <div class="col-md-3" ng-repeat="r in reviewData">
+                  <!-- {{r}} -->
+                  <div class="card">
+                    <div class="card-body">
+                      <div class="row container-fluid" style="padding: 0 30px 10px 30px;" >
+                        <h4>UID : {{r.uid}}</h4>
+                        <h4>{{r.email}}</h4>
+                      </div>
+                      <div class="row" style="border-top:1px solid #eee; padding:10px;">
+                        <div class="col-md-8">
+                          <h4>Date: {{r.created}}</h4>
+                        </div>
+                        <div class="col-md-4">
+                          <span ng-click="explore($index)" class="pull-right" style="cursor:pointer;"><i class="fa fa-info-circle fa-lg"></i></span>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </uib-tab>
+
+        <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
+          <uib-tab-heading>
+            {{tab.title}}
+            <i ng-if="tab.cancel" class="fa fa-close" ng-click="closeTab($index);"></i>
+          </uib-tab-heading>
+          <div ng-if="tab.app == 'explore'">
+            <div ng-include="'/static/ngTemplates/app.customer.reviews.explore.html'"></div>
+          </div>
+        </uib-tab>
+
+      </uib-tabset>
+    </div>
 
 
     <div ng-if="!displayReview">
@@ -597,6 +645,7 @@
     <!-- ============================================================== -->
   </div>
 </div>
+{% endverbatim %}
   <!-- ============================================================== -->
   <!-- End Container fluid  -->
   <!-- ============================================================== -->
