--- a/homepage/templates/customerDashboard.html
+++ b/homepage/templates/customerDashboard.html
@@ -426,7 +426,7 @@
             </li>
             <li class="nav-devider"></li>
             <li class="nav-small-cap">Support</li>
-            <li ng-click="review()" > <a class="waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Review</span></a></li>
+            <li ng-click="review()" > <a class="waves-effect waves-dark" href="" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Review</span></a></li>
             <li> <a class="waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Settings</span></a></li>
             <li> <a class="waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Knowledge Base</span></a></li>
             <li class="nav-devider"></li>
@@ -626,6 +626,7 @@
   <script src="{% static 'js/jquery.cookie-1.4.1.min.js' %}"></script>
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
   <script src="{% static 'js/angular.min.js' %}"></script>
+  <script src="{% static 'js/ui-bootstrap-tpls-0.14.3.min.js' %}"></script>
   {% endif %}
   <script src="/static/js/customer.js"> </script>
   <script src="{% static 'customer/js/plugins/jquery.min.js' %}"></script>
