--- a/homepage/templates/registration.html
+++ b/homepage/templates/registration.html
@@ -135,7 +135,7 @@
                           <div class="col-md-10 col-sm-10 col-xs-10">
                             <div class="form-group has-{{ validity.lastName != null && validity.lastName ? 'success':'danger'}}">
                               <input ng-model="form.lastName" type="text" class="form-control floatInput" required/>
-                              <span class="floating-label">Last Name *</span>
+                              <span class="floating-label">Last Name </span>
                               <p class="help-text text-danger" ng-if="validityChecked == true && (form.lastName.length ==0 || form.lastName == null || form.lastName == undefined) ">Last name is required</p>
                             </div>
                           </div>
