--- a/homepage/templates/customerDashboard.html
+++ b/homepage/templates/customerDashboard.html
@@ -426,9 +426,9 @@
             </li>
             <li class="nav-devider"></li>
             <li class="nav-small-cap">Support</li>
-            <li ng-click="review()" > <a class="waves-effect waves-dark" href="" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Review</span></a></li>
-            <li ng-click="settings()" > <a class="waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Settings</span></a></li>
-            <li ng-click="knowledgeBase()" > <a class="waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Knowledge Base</span></a></li>
+            <li ng-click="review()" > <a class="waves-effect waves-dark" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Review</span></a></li>
+            <li ng-click="settings()" > <a class="waves-effect waves-dark" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Settings</span></a></li>
+            <li ng-click="knowledgeBase()" > <a class="waves-effect waves-dark" aria-expanded="false"><i class="mdi mdi-table"></i><span class="hide-menu">Knowledge Base</span></a></li>
             <li class="nav-devider"></li>
             <li class="nav-small-cap">FORMS, TABLE &amp; WIDGETS</li>
             <li> <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false"><i class="mdi mdi-file"></i><span class="hide-menu">Forms</span></a>
