--- a/homepage/templates/customerDashboard.html
+++ b/homepage/templates/customerDashboard.html
@@ -624,7 +624,7 @@
   {% else %}
   <script src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
   <script src="{% static 'js/jquery.cookie-1.4.1.min.js' %}"></script>
-  <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  <!-- <script src="{% static 'js/bootstrap.min.js' %}"></script> -->
   <script src="{% static 'js/angular.min.js' %}"></script>
   <script src="{% static 'js/ui-bootstrap-tpls-0.14.3.min.js' %}"></script>
   {% endif %}
