--- a/homepage/templates/customerDashboard.html
+++ b/homepage/templates/customerDashboard.html
@@ -627,7 +627,7 @@
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
   <script src="{% static 'js/angular.min.js' %}"></script>
   <script src="{% static 'js/ui-bootstrap-tpls-0.14.3.min.js' %}"></script>
-  <!-- <script src="{% static 'js/agency.js' %}"></script> -->
+  <script src="{% static 'js/agency.js' %}"></script>
   {% endif %}
   <script src="/static/js/customer.js"> </script>
   <script src="{% static 'customer/js/plugins/jquery.min.js' %}"></script>
