--- a/homepage/templates/customerHome.html
+++ b/homepage/templates/customerHome.html
@@ -255,7 +255,7 @@
             <div class="row" style="padding-top:15px">
               <div class="col-md-3">
                 <div class="row" style="border-right:solid 2px #eeeeee;min-height:82vh;position:relative;" ng-if="custDocs.length>0||docForm!=none">
-                  <div class="row text-center container-fluid card {{docForm.pk==doc.pk?'bg-yellow':'bg-shaded'}}" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;font-size:18px;padding:10px;margin:20px 10px">
+                  <div class="row text-center container-fluid card" ng-repeat="doc in custDocs" ng-click="addDoc($index)" style="cursor:pointer;font-size:18px;padding:10px;margin:20px 10px; {{docForm.pk==doc.pk?'background-color:#ffb22b':'background-color: #e9e9e9 !important;'}}">
                     {{doc.title}}
                   </div>
                 </div>
