--- a/static_shared/customer/css/style.css
+++ b/static_shared/customer/css/style.css
@@ -107,6 +107,60 @@ a.link {
 html body .mdi:before, html body .mdi-set {
   line-height: initial; }
 
+  .nav {
+   padding-left:0;
+   margin-bottom:0;
+   list-style:none
+  }
+  .nav>li {
+   position:relative;
+   display:block
+  }
+  .nav>li>a {
+   position:relative;
+   display:block;
+   padding:10px 15px
+  }
+
+  .nav-tabs {
+ border-bottom:1px solid #ddd
+}
+.nav-tabs>li {
+ float:left;
+ margin-bottom:-1px
+}
+.nav-tabs>li>a {
+ margin-right:2px;
+ line-height:1.42857143;
+ border:1px solid transparent;
+ border-radius:4px 4px 0 0
+}
+.nav-tabs>li>a:hover {
+ border-color:#eee #eee #ddd
+}
+.nav-tabs>li.active>a,.nav-tabs>li.active>a:focus,.nav-tabs>li.active>a:hover {
+ color:#555;
+ cursor:default;
+ background-color:#fff;
+ border:1px solid #ddd;
+ border-bottom-color:transparent
+}
+.nav-tabs.nav-justified {
+ width:100%;
+ border-bottom:0
+}
+.nav-tabs.nav-justified>li {
+ float:none
+}
+.nav-tabs.nav-justified>li>a {
+ margin-bottom:5px;
+ text-align:center
+}
+.nav-tabs.nav-justified>.dropdown .dropdown-menu {
+ top:auto;
+ left:auto
+}
+
 /*******************
 Headings
 *******************/
