--- a/homepage/templates/customerDashboard.html
+++ b/homepage/templates/customerDashboard.html
@@ -630,6 +630,7 @@
   <script src="{% static 'js/ui-bootstrap-tpls-0.14.3.min.js' %}"></script>
   <script src="{% static 'js/tinymce.min.js' %}"></script>
   <!-- <script src="{% static 'js/agency.js' %}"></script> -->
+  <script src="{% static 'js/angular-ui-router.min.js' %}"></script>
   {% endif %}
   <script src="{% static 'js/ng-tinymce.js' %}"></script>
   <script src="{% static 'customer/js/plugins/jquery.min.js' %}"></script>
