--- a/homepage/templates/customerDashboard.html
+++ b/homepage/templates/customerDashboard.html
@@ -632,6 +632,7 @@
   <!-- <script src="{% static 'js/agency.js' %}"></script> -->
   <script src="{% static 'js/angular-ui-router.min.js' %}"></script>
   {% endif %}
+  <script src="{% static 'js/angular-flash.js' %}"></script>
   <script src="{% static 'js/ng-tinymce.js' %}"></script>
   <script src="{% static 'customer/js/plugins/jquery.min.js' %}"></script>
   <!-- Bootstrap tether Core JavaScript -->
@@ -664,6 +665,7 @@
   <!-- ============================================================== -->
   <script src="{% static 'customer/js/plugins/jQuery.style.switcher.js' %}"></script>
   <script src="/static/js/customer.js"> </script>
+  <script src="{% static 'js/custom/filters.js' %}"></script>
 
 
 
