--- a/homepage/templates/customerHome.html
+++ b/homepage/templates/customerHome.html
@@ -6,7 +6,7 @@
 <!-- Page wrapper  -->
 <!-- ============================================================== -->
 {% verbatim %}
-<div class="page-wrapper">
+<div class="page-wrapper" style="padding-bottom:0px;">
   <!-- ============================================================== -->
   <!-- Container fluid  -->
   <!-- ============================================================== -->
